--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,8 @@
 </div>
 
 
-<img class="storm storm_sm-screen hidden-xs" src="images/storm.png">
-<img class="storm storm_xs-screen visible-xs" src="images/storm-bottom.png">
+<img class="storm storm_sm-screen hidden-xs" src="images/storm.jpg">
+<img class="storm storm_xs-screen visible-xs" src="images/storm-bottom.jpg">
 
 
 {% endblock %}
