--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,9 @@
 </div>
 
 
-<img class="storm storm_sm-screen hidden-xs" src="images/storm.jpg">
-<img class="storm storm_xs-screen visible-xs" src="images/storm-bottom.jpg">
+<img class="storm storm_xs-screen" src="images/storm-bottom.jpg">
+<img class="storm storm_sm-screen" src="images/storm-bottom-wide.jpg">
+<img class="storm storm_md-screen" src="images/storm.jpg">
 
 
 {% endblock %}
