--- a/app/index.html
+++ b/app/index.html
@@ -29,12 +29,11 @@
       </li>
     </ul>
   </section>
+
+  <section>
+    <small class="visible-xs gray">Open this page on desktop to see much more magnificent giraffe with parallax</small>
+  </section>
 </div>
-
-
-<img class="storm storm_xs-screen" src="images/storm-bottom.jpg">
-<img class="storm storm_sm-screen" src="images/storm-bottom-wide.jpg">
-<img class="storm storm_md-screen" src="images/storm.jpg">
 
 
 {% endblock %}
