--- a/app/index.html
+++ b/app/index.html
@@ -10,29 +10,16 @@
   </header>
 
   <section class="section-with-margin">
-    <ul class="contacts-links">
-      <li class="contacts-links__item">
-        <img class="contacts-links__icon" src="images/icons/github.png">
-        <a class="contacts-links__link" href="https://github.com/reo7sp">GitHub</a>
-      </li>
-      <li class="contacts-links__item">
-        <img class="contacts-links__icon" src="images/icons/telegram.png">
-        <a class="contacts-links__link" href="https://telegram.me/reo7sp">Telegram</a>
-      </li>
-      <li class="contacts-links__item">
-        <img class="contacts-links__icon" src="images/icons/skype.png">
-        <a class="contacts-links__link" href="skype:reo_sp?add">Skype</a>
-      </li>
-      <li class="contacts-links__item">
-        <img class="contacts-links__icon" src="images/icons/mail.png">
-        <a class="contacts-links__link" href="&#109;&#097;&#105;&#108;&#116;&#111;:&#097;&#064;&#114;&#101;&#111;&#055;&#115;&#112;&#046;&#114;&#117;">&#097;&#064;&#114;&#101;&#111;&#055;&#115;&#112;&#046;&#114;&#117;</a>
-      </li>
-    </ul>
+    {% include 'partials/_contacts.html' %}
   </section>
 
-  <section>
-    <small class="visible-xs gray">Open this page on desktop to see much more magnificent giraffe with parallax</small>
+  <section class="section-with-margin">
+    {% include 'partials/_work.html' %}
   </section>
+
+  <aside>
+    <small class="visible-md gray">Open this page on desktop to see giraffe with cool parallax effect</small>
+  </aside>
 </div>
 
 
