--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,10 @@
   </section>
 
   <section class="section-with-margin">
+    {% include 'partials/_education.html' %}
+  </section>
+
+  <section class="section-with-margin">
     {% include 'partials/_work.html' %}
   </section>
 
