--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 <div class="container">
   <header>
     <h1>Oleg Morozenkov</h1>
-    <h4>@reo7sp</h4>
+    <p>@<b>reo7sp</b></p>
   </header>
 
   <section class="section-with-margin">
