--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     {% include 'partials/_work.html' %}
   </section>
 
-  <aside>
+  <aside class="giraffe-background-notice">
     <small class="visible-md gray">Open this page on desktop to see giraffe with cool parallax effect</small>
   </aside>
 </div>
