Multiline name on mobile

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 <div class="container">
   <header>
     <a href="https://reo7sp.ru" no-printable-links class="header-site-link">reo7sp.ru</a>
-    <h1>Oleg Morozenkov</h1>
+    <h1>Oleg<span class="break-on-mobile"> </span>Morozenkov</h1>
     <p>@<b>reo7sp</b></p>
   </header>
 
