--- a/app/index.html
+++ b/app/index.html
@@ -1,33 +1,3 @@
 {% import 'partials/i18n/_en.html' as i18n %}
 
-{% extends 'templates/_base.html' %}
-
-{% block title %}{{ i18n.oleg }} {{ i18n.morozenkov }}{% endblock %}
-
-{% block body %}
-
-<div class="container">
-  <header>
-    <a href="https://reo7sp.ru" no-printable-links class="header-site-link">reo7sp.ru</a>
-    <h1>{{ i18n.oleg }}<span class="break-on-mobile"> </span>{{ i18n.morozenkov }}</h1>
-    <p>@<b>reo7sp</b></p>
-  </header>
-
-  <section class="section-with-margin">
-    {% include 'partials/_contacts.html' %}
-  </section>
-
-  <section class="section-with-margin">
-    {% include 'partials/_education.html' %}
-  </section>
-
-  <section class="section-with-margin">
-    {% include 'partials/_work.html' %}
-  </section>
-
-  <aside class="giraffe-background-notice">
-    <small class="visible-md gray">{{ i18n.giraffeNotice }}</small>
-  </aside>
-</div>
-
-{% endblock %}
+{% extends 'partials/_index.html' %}
