--- a/redirect-site/index-ru.html
+++ b/redirect-site/index-ru.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url=//oleg.rocks/ru.html">
+        <meta http-equiv="refresh" content="1; url=//oleg.rocks">
         <script type="text/javascript">
-            window.location.href = "//oleg.rocks/ru.html"
+            window.location.href = "//oleg.rocks"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href="//oleg.rocks/ru.html">link to example</a>.
+        If you are not redirected automatically, follow this <a href="//oleg.rocks">link to example</a>.
     </body>
 </html>
