[+] add printable links & reduce text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <h1 class="site-header">Олег Морозенков</h1>
 
-    <p class="site-link hide-on-screen"><a target="_blank" href="https://oleg.rocks">http://oleg.rocks</a></p>
+    <p class="site-link hide-on-screen"><a target="_blank" href="https://oleg.rocks" data-no-printable-links="true">http://oleg.rocks</a></p>
 
     <p class="hide-on-screen">
         Специализируюсь на бекенд-разработке на Go/Python и на анализе данных.
@@ -191,7 +191,7 @@
     </section>
 
     <section class="resume-section">
-        <h2>Open-source проекты и достижения</h2>
+        <h2>Open-source проекты</h2>
 
         <h3>tgbot-cpp</h3>
         <p>
@@ -245,24 +245,6 @@
             <span class="links-list__item"><a target="_blank" href="https://github.com/voice2vec/voicetools">Гитхаб c дальнейшими исследованиями</a> <span class="github-stat"><img src="images/icons/star.svg">8+</span></span>
         </p>
 
-        <h3>GoToHack2 + MTS</h3>
-        <p>
-            <div class="technology-tag technology-tag--second">хакатон</div>
-            <div class="technology-tag technology-tag--first">обработка текста</div>
-            <div class="technology-tag technology-tag--python">python</div>
-        </p>
-        <p>
-            Кейс от МТС: предсказывание лайков, репостов и лайков от репостов в группе TalentEdme.
-        </p>
-        <p>
-            Сравнивали содержимое постов и интересов пользователя при помощи LDA.
-        </p>
-        <p class="links-list">
-            <a class="links-list__item" target="_blank" href="files/gotohack2.pdf">Презентация</a>
-            <a class="links-list__item" target="_blank" href="https://github.com/reo7sp/vk-text-likeness">Гитхаб</a>
-            <a class="links-list__item" target="_blank" href="certificates/gotohack2-win.jpg">Сертификат победителя</a>
-        </p>
-
         <div class="github-footer">
             <p class="github-footer__first">
                 <img class="contacts-links__icon" src="images/icons/github.png" alt="GitHub">
@@ -287,23 +269,23 @@
         <ul class="contacts-links">
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/github.png" alt="GitHub">
-                <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp">GitHub</a>
+                <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp" data-no-printable-links="true">GitHub</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/telegram.png" alt="Telegram">
-                <a class="contacts-links__link" target="_blank" href="https://t.me/reo7sp">Telegram</a>
+                <a class="contacts-links__link" target="_blank" href="https://t.me/reo7sp" data-no-printable-links="true">Telegram</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/vk.png" alt="VK">
-                <a class="contacts-links__link" target="_blank" href="https://vk.com/reo7sp">VK</a>
+                <a class="contacts-links__link" target="_blank" href="https://vk.com/reo7sp" data-no-printable-links="true">VK</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/skype.png" alt="Skype">
-                <a class="contacts-links__link" target="_blank" href="skype:reo_sp?add">Skype</a>
+                <a class="contacts-links__link" target="_blank" href="skype:reo_sp?add" data-no-printable-links="true">Skype</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/mail.png" alt="Email">
-                <a class="contacts-links__link" target="_blank" href="&#109;&#097;&#105;&#108;&#116;&#111;:&#109;&#064;&#111;&#108;&#101;&#103;&#046;&#114;&#111;&#099;&#107;&#115;">&#109;&#064;&#111;&#108;&#101;&#103;&#046;&#114;&#111;&#099;&#107;&#115;</a>
+                <a class="contacts-links__link" target="_blank" href="&#109;&#097;&#105;&#108;&#116;&#111;:&#109;&#064;&#111;&#108;&#101;&#103;&#046;&#114;&#111;&#099;&#107;&#115;" data-no-printable-links="true">&#109;&#064;&#111;&#108;&#101;&#103;&#046;&#114;&#111;&#099;&#107;&#115;</a>
             </li>
         </ul>
     </section>
