--- a/index.html
+++ b/index.html
@@ -269,23 +269,23 @@
         <ul class="contacts-links">
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/github.png" alt="GitHub">
-                <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp" data-no-printable-links="true">GitHub</a>
+                <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp">GitHub</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/telegram.png" alt="Telegram">
-                <a class="contacts-links__link" target="_blank" href="https://t.me/reo7sp" data-no-printable-links="true">Telegram</a>
+                <a class="contacts-links__link" target="_blank" href="https://t.me/reo7sp">Telegram</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/vk.png" alt="VK">
-                <a class="contacts-links__link" target="_blank" href="https://vk.com/reo7sp" data-no-printable-links="true">VK</a>
+                <a class="contacts-links__link" target="_blank" href="https://vk.com/reo7sp">VK</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/skype.png" alt="Skype">
-                <a class="contacts-links__link" target="_blank" href="skype:reo_sp?add" data-no-printable-links="true">Skype</a>
+                <a class="contacts-links__link" target="_blank" href="skype:reo_sp?add">Skype</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/mail.png" alt="Email">
-                <a class="contacts-links__link" target="_blank" href="&#109;&#097;&#105;&#108;&#116;&#111;:&#109;&#064;&#111;&#108;&#101;&#103;&#046;&#114;&#111;&#099;&#107;&#115;" data-no-printable-links="true">&#109;&#064;&#111;&#108;&#101;&#103;&#046;&#114;&#111;&#099;&#107;&#115;</a>
+                <a class="contacts-links__link" target="_blank" href="&#109;&#097;&#105;&#108;&#116;&#111;:&#109;&#064;&#111;&#108;&#101;&#103;&#046;&#114;&#111;&#099;&#107;&#115;">&#109;&#064;&#111;&#108;&#101;&#103;&#046;&#114;&#111;&#099;&#107;&#115;</a>
             </li>
         </ul>
     </section>
