[-] remove some links

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </p>
 
         <h3><img class="employment-logo employment-logo--mini" src="images/employment/hse.jpg"> Введение в машинное обучение / НИУ ВШЭ</h3>
-        <p>Авг 2016, 7 недельный курс.</p>
+        <p>Авг 2016, MOOC-курс.</p>
         <p class="links-list">
             <a class="links-list__item" target="_blank" href="https://www.coursera.org/learn/vvedenie-mashinnoe-obuchenie">Страница&nbsp;курса</a>
             <a class="links-list__item" target="_blank" href="https://www.coursera.org/account/accomplishments/certificate/NANEYSFHTVTZ">Сертификат&nbsp;курсеры</a>
@@ -249,16 +249,6 @@
             <p class="github-footer__first">
                 <img class="contacts-links__icon" src="images/icons/github.png" alt="GitHub">
                 <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp">Посмотреть опенсорс на Гитхабе →</a>
-            </p>
-        </div>
-
-        <div class="extra-footer">
-            <p>
-                <img class="contacts-links__icon" src="images/icons/instagram.png" alt="Instagram">
-                <a class="contacts-links__link" target="_blank" href="https://instagram.com/reo7sp">Ещё Инстаграм</a>
-                <br>
-                <img class="contacts-links__icon" src="images/icons/things.png" alt="Штуки">
-                <a class="contacts-links__link" target="_blank" href="https://olezh.es">Штуки</a>
             </p>
         </div>
     </section>
