--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p class="site-link hide-on-screen"><a target="_blank" href="https://oleg.rocks" data-no-printable-links="true">http://oleg.rocks</a></p>
 
     <p class="hide-on-screen">
-        Специализируюсь на бекенд-разработке на Go/Python и на анализе данных.
+        Специализируюсь на бекенд-разработке и на анализе данных.
     </p>
 
     <section class="resume-section hide-on-print">
@@ -53,32 +53,17 @@
     </section>
 
     <section class="resume-section">
-        <h2>Образование</h2>
-
-        <h3><img class="employment-logo employment-logo--mini" src="images/employment/bmstu.jpg"> МГТУ им. Н.Э. Баумана</h3>
-        <p>2016–2018, Машиностроительные технологии. <span class="shadow-text">(перевелся после 2 курса)</span></p>
-        <p>2018–2021, Информатика и системы управления.</p>
-
-        <h3><img class="employment-logo employment-logo--mini" src="images/employment/technopark.jpg"> Технопарк Mail.Ru</h3>
-        <p>2016–2018, Системный архитектор.</p>
-        <p class="links-list">
-            <a class="links-list__item" target="_blank" href="https://park.mail.ru/curriculum/program/main/">Программа</a>
-        </p>
-
-        <h3><img class="employment-logo employment-logo--mini" src="images/employment/hse.jpg"> Введение в машинное обучение / НИУ ВШЭ</h3>
-        <p>Авг 2016, MOOC-курс.</p>
-        <p class="links-list">
-            <a class="links-list__item" target="_blank" href="https://www.coursera.org/learn/vvedenie-mashinnoe-obuchenie">Страница&nbsp;курса</a>
-            <a class="links-list__item" target="_blank" href="https://www.coursera.org/account/accomplishments/certificate/NANEYSFHTVTZ">Сертификат&nbsp;курсеры</a>
-        </p>
-    </section>
-
-    <section class="resume-section">
         <h2>Опыт работы</h2>
 
+        <h3><img class="employment-logo" src="images/employment/mailru.jpg"> Mail.Ru Group</h3>
+        <p>Февраль 2019 – текущее время.</p>
+        <p>Работаю бекендером на C/Go в Почте.</p>
+        <br>
+        <p>Текущее место работы.</p>
+
         <h3><img class="employment-logo" src="images/employment/kts.png"> KTS Studio</h3>
-        <p>Июль 2017 – текущее время (1,5 года).</p>
-        <p>Работаю бекендером на Go/Python и дата саентистом.</p>
+        <p>Июль 2017 – январь 2019 (1,5 года).</p>
+        <p>Работал бекендером на Go/Python и дата саентистом.</p>
 
         <h4>Опыт как Go бекендера</h4>
         <p>
@@ -138,6 +123,27 @@
             Технологии:
             <span class="technology-tag technology-tag--tensorflow">tensorflow</span>
             <span class="technology-tag technology-tag--keras">keras</span>
+        </p>
+    </section>
+
+    <section class="resume-section">
+        <h2>Образование</h2>
+
+        <h3><img class="employment-logo employment-logo--mini" src="images/employment/bmstu.jpg"> МГТУ им. Н.Э. Баумана</h3>
+        <p>2016–2018, Машиностроительные технологии. <span class="shadow-text">(перевелся после 2 курса)</span></p>
+        <p>2018–2021, Информатика и системы управления.</p>
+
+        <h3><img class="employment-logo employment-logo--mini" src="images/employment/technopark.jpg"> Технопарк Mail.Ru</h3>
+        <p>2016–2018, Системный архитектор.</p>
+        <p class="links-list">
+            <a class="links-list__item" target="_blank" href="https://park.mail.ru/curriculum/program/main/">Программа</a>
+        </p>
+
+        <h3><img class="employment-logo employment-logo--mini" src="images/employment/hse.jpg"> Введение в машинное обучение / НИУ ВШЭ</h3>
+        <p>Авг 2016, MOOC-курс.</p>
+        <p class="links-list">
+            <a class="links-list__item" target="_blank" href="https://www.coursera.org/learn/vvedenie-mashinnoe-obuchenie">Страница&nbsp;курса</a>
+            <a class="links-list__item" target="_blank" href="https://www.coursera.org/account/accomplishments/certificate/NANEYSFHTVTZ">Сертификат&nbsp;курсеры</a>
         </p>
     </section>
 
