--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/telegram.png" alt="Telegram">
-                <a class="contacts-links__link" target="_blank" href="https://t.me/reo7sp">Телеграм</a>
+                <a class="contacts-links__link" target="_blank" href="https://t.me/olezhes">Телеграм</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/vk.png" alt="VK">
-                <a class="contacts-links__link" target="_blank" href="https://vk.com/reo7sp">ВК</a>
+                <a class="contacts-links__link" target="_blank" href="https://vk.com/olezhes">ВК</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/facebook.png" alt="Facebook">
-                <a class="contacts-links__link" target="_blank" href="https://facebook.com/reo7sp">Фейсбук</a>
+                <a class="contacts-links__link" target="_blank" href="https://facebook.com/olezhes">Фейсбук</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/skype.png" alt="Skype">
