--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/telegram.png" alt="Telegram">
-                <a class="contacts-links__link" target="_blank" href="https://t.me/reo7sp">Telegram</a>
+                <a class="contacts-links__link" target="_blank" href="https://t.me/olezhes">Telegram</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/vk.png" alt="VK">
-                <a class="contacts-links__link" target="_blank" href="https://vk.com/reo7sp">VK</a>
+                <a class="contacts-links__link" target="_blank" href="https://vk.com/olezhes">VK</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/skype.png" alt="Skype">
