--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
                 <a class="contacts-links__link" target="_blank" href="https://t.me/olezhes">Телеграм</a>
             </li>
             <li class="contacts-links__item">
-                <img class="contacts-links__icon" src="images/icons/vk.png" alt="VK">
-                <a class="contacts-links__link" target="_blank" href="https://vk.com/olezhes">ВК</a>
-            </li>
-            <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/facebook.png" alt="Facebook">
                 <a class="contacts-links__link" target="_blank" href="https://facebook.com/olezhes">Фейсбук</a>
             </li>
             <li class="contacts-links__item">
-                <img class="contacts-links__icon" src="images/icons/skype.png" alt="Skype">
-                <a class="contacts-links__link" target="_blank" href="skype:reo_sp?add">Скайп</a>
+                <img class="contacts-links__icon" src="images/icons/linkedin.png" alt="LinkedIn">
+                <a class="contacts-links__link" target="_blank" href="https://linkedin.com/in/olezhes">ЛинкедИн</a>
+            </li>
+            <li class="contacts-links__item">
+                <img class="contacts-links__icon" src="images/icons/vk.png" alt="VK">
+                <a class="contacts-links__link" target="_blank" href="https://vk.com/olezhes">ВК</a>
             </li>
             <li class="contacts-links__item">
                 <img class="contacts-links__icon" src="images/icons/mail.png" alt="Email">
